added icons and thought better on the nav bar

--- a/Views/Buckets/Index.cshtml
+++ b/Views/Buckets/Index.cshtml
@@ -4,23 +4,26 @@
     ViewData["Title"] = "Index";
 }
 
-<ul>
+@*<ul>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Buckets" asp-action="Index">Buckets</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Dashboards" asp-action="Index"><i class="fa-solid fa-gauge"></i> Dashboard</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="BankAccounts" asp-action="Index">Bank Accounts</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Buckets" asp-action="Index"><i class="fa-solid fa-bucket"></i> Buckets</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="BankAccounts" asp-action="Index"><i class="fa-solid fa-building-columns"></i> Bank Accounts</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Bills" asp-action="Index">Bills</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Incomes" asp-action="Index">Income Sources</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Incomes" asp-action="Index"><i class="fa-solid fa-sack-dollar"></i> Income Sources</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Expenses" asp-action="Index">Expenses</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Expenses" asp-action="Index"><i class="fa-solid fa-file-invoice-dollar"></i> Expenses</a>
     </li>
-</ul>
+</ul>*@
 
 <h1>Index</h1>
 
